Style sheets for Navigation Bar. Also implemented animations, colors and custom button using scss.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,13 @@
 @import "~bootstrap/scss/bootstrap";
+@import "../public/scss/component/button/mb-button";
+
+body {
+  background-color: #2E2E2E;
+
+  h1 {
+    font-family: Poppins,serif;
+  }
+}
 
 .App {
   text-align: center;
