Sign-up View, Register Form, Global changes of styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 @import "../public/scss/component/button/mb-button";
+@import "../public/scss/component/card/card";
 
 body {
-  background-color: #2E2E2E;
+  background-color: #191919;
 
   h1 {
     font-family: Poppins,serif;
