--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,11 @@
 @import "~bootstrap/scss/bootstrap";
+
+@import '../public/scss/color/colors';
+@import "../public/scss/animation/hover";
+@import "../public/scss/animation/signal";
+
 @import "../public/scss/component/button/mb-button";
+@import "../public/scss/component/swiper/swiper";
 
 body {
   background-color: #2E2E2E;
