Products page, Blob buttons, Animated Backgrounds

--- a/public/scss/component/text/text.scss
+++ b/public/scss/component/text/text.scss
@@ -8,6 +8,14 @@
   color: $color;
 }
 
+@mixin mb-text-weight($number) {
+  font-weight: $number;
+}
+
 .text-red {
   @include mb-text(red);
+}
+
+.text-weight-500 {
+  @include mb-text-weight(500);
 }
