--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @import '../public/scss/color/colors';
 @import "../public/scss/animation/hover";
@@ -14,6 +15,7 @@
 
 @import "../public/scss/component/background/background";
 @import "../public/scss/component/background/background-gradient";
+@import "../public/scss/component/background/background-vanta";
 
 
 body {
