(🔋 refactor): A lot of changes in pages/components dir

--- a/public/scss/component/background/background.scss
+++ b/public/scss/component/background/background.scss
@@ -1,5 +1,9 @@
 @import '../../color/colors';
 
+.bg-secondary {
+  background-color: #DC3545!important;
+}
+
 .emoji-background-container {
 
   section {
