--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@
 @import "../public/scss/component/card/card";
 @import "../public/scss/component/text/text";
 @import "../public/scss/component/field/text-field";
+@import "../public/scss/component/icon/icon";
 
 @import "../public/scss/component/background/background";
 @import "../public/scss/component/background/background-gradient";
