--- a/public/scss/component/card/card.scss
+++ b/public/scss/component/card/card.scss
@@ -2,5 +2,12 @@
   border: none;
   border-radius: 5px !important;
   z-index: 0;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(21, 21, 21, .9);
+  color: snow;
+
+  div {
+    color: snow;
+  }
 }
+
+
