--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
 @import "../public/scss/component/button/button-blob-medium";
 @import "../public/scss/component/button/button-blob-large";
 @import "../public/scss/component/card/card";
+@import "../public/scss/component/card/modern-card";
 @import "../public/scss/component/text/text";
 @import "../public/scss/component/field/text-field";
 @import "../public/scss/component/icon/icon";
